# miransas-db

./: .gitignore  Readme  deploy.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml  security.yml
backend/: .env.example  Cargo.toml
backend/benches/: crypto_bench.rs
backend/migrations/: 20260419000200_add_connection_url.sql  20260419000300_add_project_connection_string.sql  20260421000100_restructure.sql  20260424000100_add_role_columns.sql  20260424000200_revoke_public_access.sql
backend/src/: config.rs  errors.rs  lib.rs  services.rs
backend/src/handlers/: auth.rs  databases.rs  mod.rs  projects.rs  query_log.rs  saved_queries.rs  secrets.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/services/: admin.rs  databases.rs  mod.rs  projects.rs  query.rs  query_log.rs  saved_queries.rs  schema.rs  secrets.rs  shared.rs  users.rs
backend/src/utils/: crypto.rs  jwt.rs
backend/tests/: http.rs
benchmarks/: README.md
benchmarks/k6/: load.js  smoke.js
changeset/: UNRELEASED.md  config.json
docker/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docker/postgres/: pg_hba.conf  postgresql.conf
frontend/: frontend.md  readme.md
