[package]
name = "miransas-db"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "crypto_bench"
harness = false

[dependencies]
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
sqlx            = { version = "0.7", features = [
    "runtime-tokio-rustls", "postgres", "uuid",
    "chrono", "macros", "migrate", "json",
] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
dotenvy         = "0.15"
tower           = { version = "0.5", features = ["util"] }
tower-http      = { version = "0.5", features = ["trace", "cors"] }
uuid            = { version = "1",   features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
anyhow          = "1.0"
thiserror       = "1.0"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
aes-gcm         = "0.10"
base64          = "0.22"
sha2            = "0.10"
getrandom       = "0.2"
jsonwebtoken    = "9"

[dev-dependencies]
criterion       = { version = "0.5", features = ["html_reports"] }
tower           = { version = "0.5", features = ["util"] }
